Bug 411612 - Bugzilla OpenSearch produces Bugzilla error page in Camino (add support for the 'param' element used in old versions of the OpenSearch spec). patch by Sean Murphy <murph@seanmurph.com>, r=Jeff.Dlouhy, sr=smorgan